57) kernel: ipv4: use standard iovec primitive in raw_probe_proto_opt.<br>
58) kernel: mips: fix start of free memory when using initrd.<br>
59) kernel: pppoe: lacks DST MAC address check.<br>
60) kernel: ppp: unset skb checksum complete in ppp_receive_frame.<br>
61) kernel: ppp: mppe: sanity error path rework.<br>
62) kernel: ppp: mppe: discard late packet in stateless mode.<br>
63) kernel: ip_forward: Drop frames with attached skb->sk.<br>
64) kernel: tcp: fix possible deadlock in tcp_send_fin().<br>
65) kernel: dql: dql_queued() should write first to reduce bus transactions.<br>
<br>
<br>
<b>3.0.x</b><br>
1) uboot: update to 4.3.2.0 version.<br>
2) igmpproxy: fix switch managment.<br>
3) switchtools: add vlan clear command.<br>
4) init.d: full cleanup vlan parts in restore dumb mode function.<br>
5) init.d: move disable eee in raeth.<br>
6) configs: enable hw_nat ipv6 support for all devices.<br>
7) kernel: add MX25L51245G, MT25QL512AB, N25Q256A spi flashs support.<br>
8) kernel: ralink_arch: disable MT7621 PCIe Spread Spectrum to avoid Ch14 Rx De-sense.<br>
9) kernel: ralink_arch: set MT7628 PCIe PHY to 1.3mA for power saving when PCIe port not used.<br>
10) kernel: ralink_arch: fix MT7628 SDXC clock interferences.<br>
11) kernel: ralink_nvram: fix check part size in commit.<br>
12) kernel: ralink_hw_nat: add FoE 80b entries workaround on IPv6 offload enabled.<br>
13) kernel: ralink_hw_nat: disable multicast offload on QDMA enabled (CPU reason is stripped after FQ).<br>
14) kernel: ralink_raeth: fix MT7628 EPHY initialization.<br>
<br>
<br>
<b>TODO:</b><br>
1) add Default ipv6 gateway in VPN UI (vpnDGWSIX variable).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
5) need add davfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>