@@ -887,6 +887,7 @@
 12) kernel: ralink_hw_nat: add FoE 80b entries workaround on IPv6 offload enabled.<br>
 13) kernel: ralink_hw_nat: disable multicast offload on QDMA enabled (CPU reason is stripped after FQ).<br>
 14) kernel: ralink_raeth: fix MT7628 EPHY initialization.<br>
+15) kernel: ralink_raeth: always use TX ring size 512 to prevent ring full on PPE loopback traffic.<br>
 <br>
 <br>
 <b>TODO:</b><br>
